--- a/actions/package.json
+++ b/actions/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "Collection of useful github actions and workflows",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ncc build",
+    "format": "prettier --write \"src/*.js\"",
+    "format:check": "prettier --check \"src/*.js\""
   },
   "author": "Jan Bulling",
   "license": "ISC",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/glob": "^0.3.0"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.34.0",
+    "prettier": "^2.7.1"
   }
 }
