changed ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,10 @@ jobs:
     name: Run Prettier
     steps:
       - uses: actions/checkout@v3
-      - run: cd actions
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 16
       - name: Install dependencies
-        run: npm install
+        run: cd actions && npm install
       - run: npm format:check
